--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
 
     //Room
     implementation 'androidx.room:room-runtime:2.3.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
     kapt 'androidx.room:room-compiler:2.3.0'
 
     //Picasso
@@ -57,6 +58,9 @@ dependencies {
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //Google Maps
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
